--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="int-shops_css.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Title</title>
+  <link rel="stylesheet" href="int-shops_css.css">
 <!--  <link rel="stylesheet" href='internet-shops.scss'>-->
 </head>
 <body>
@@ -85,7 +86,7 @@
         <div class="internet-content container">
             <p class="internet-content-header">Продавайте товары онлайн</p>
             <div class="internet-content-block">
-              <div>
+              <div class="content-block">
                 <p class="content-block-text">Сегодня интернет-магазин один из важных каналов продаж. Наша компания занимается созданием интернет-магазинов на базе 1С-Битрикс уже более 5-ти лет. Имеем хороший опыт интеграции с различными CRM системами, 1С и других системами бухучета.</p>
                 <p class="content-block-text">Для нас важно, чтобы интернет-магазин был хорошо продуман, касаемо сортировки товаров, фильтрации позиций, интеграции и т.д. Именно поэтому над проектом работает целая команда в составе бизнес-аналитика, дизайнера, маркетолога, верстальщика, разработчика.</p>
               </div>
@@ -161,35 +162,35 @@
 
               <div class="page-list-list">
                 <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round">
+                  <svg class="svg-resize-horizontal-round" width="24" height="24">
                     <use href="#resize-horizontal-round"/>
                   </svg>
                   <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
                   <span class="list-item-text">Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
                 </div>
                 <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round">
+                  <svg class="svg-resize-horizontal-round" width="24" height="24">
                     <use href="#resize-horizontal-round"/>
                   </svg>
                   <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
                   <span class="list-item-text">Адаптация к мобильной версии</span>
                 </div>
                 <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round">
+                  <svg class="svg-resize-horizontal-round" width="24" height="24">
                     <use href="#resize-horizontal-round"/>
                   </svg>
                   <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
                   <span class="list-item-text">Базовая настройка SEO и подключение основных метрик</span>
                 </div>
                 <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round">
+                  <svg class="svg-resize-horizontal-round" width="24" height="24">
                     <use href="#resize-horizontal-round"/>
                   </svg>
                   <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
                   <span class="list-item-text">Построим для вас CRM;</span>
                 </div>
                 <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round">
+                  <svg class="svg-resize-horizontal-round" width="24" height="24">
                     <use href="#resize-horizontal-round"/>
                   </svg>
                   <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
@@ -201,14 +202,14 @@
 
               <div class="page-list-list">
                 <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round">
+                  <svg class="svg-resize-horizontal-round" width="24" height="24">
                     <use href="#resize-horizontal-round"/>
                   </svg>
                   <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
                   <span class="list-item-text">SEO-оптимизацию</span>
                 </div>
                 <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round">
+                  <svg class="svg-resize-horizontal-round" width="24" height="24">
                     <use href="#resize-horizontal-round"/>
                   </svg>
                   <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
@@ -226,8 +227,8 @@
             <p class="page-cases-title">Наши кейсы</p>
             <div class="page-cases-gallery">
                 <img class="cases-gallery-item" src='img/development/Frame%20105.png' alt="frame1"/>
-                <img class="cases-gallery-item" src='img/development/Frame%20106.png' alt="frame1"/>
                 <img class="cases-gallery-item" src='img/development/Frame%20107.png' alt="frame1"/>
+              <img class="cases-gallery-item" src='img/development/Frame%20106.png' alt="frame1"/>
             </div>
             <div class="page-cases-swiper">
               <div class="swiper-arrows">
