--- a/src/html/head.html
+++ b/src/html/head.html
@@ -4,5 +4,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>@@title</title>
   <link rel="stylesheet" href="css/style.min.css" />
-  <link rel="stylesheet" href="css/home.min.css" />
+  <link rel="stylesheet" href="@@linkCSS"/>
 </head>
