--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="container">
   <a class="header-logo" href="/"><img src="@img/icons/icons.svg#logo" alt="logo" /></a>
   <ul class="header-menu">
     <li class="header-menu-item">Услуги
@@ -10,9 +10,10 @@
     <li class="header-menu-item">Блог</li>
     <li class="header-menu-item">Контакты</li>
   </ul>
-  <a class="header-phone" href="+7 980 375 22 54">
+  <a class="header-phone" href="tel:+79803752254">
     <img class="header-phone-icon" src="@img/icons/icons.svg#shape" alt="phone" />
     <span class="header-phone-text"> +7 980 375 22 54 </span>
     <img class="header-phone-arrow" src="@img/icons/icons.svg#arrow" alt="arrow" />
   </a>
 </header>
+<div class="header-line"></div>
