--- a/src/footer.html
+++ b/src/footer.html
@@ -3,8 +3,6 @@
 
         <div class="footer-container appeal-inner">
 
-
-
             <div class="footer-block">
                 <div class="footer-blog">
                     <button class="footer-blog-button">
@@ -14,7 +12,7 @@
                 </div>
 
                 <div class="footer-box">
-                    <img class="footer-box-img" src="../img/home/footer-img.png" alt="footer-img"/>
+                    <img class="footer-box-img" src="img/home/footer-img.png" alt="footer-img"/>
 
                     <div class="footer-box-main">
                         <p class="footer-box-main-header">CRM Битрикс 24 для автоматизации вашего бизнеса</p>
@@ -56,7 +54,7 @@
         </div>
 
         <div class="footer-contacts">
-            <img class="footer-contacts-logo" src="../img/home/logo.svg" alt="logo"/>
+            <img class="footer-contacts-logo" src="img/home/logo.svg" alt="logo"/>
             <div class="footer-contacts-info">
                 <div class="footer-contacts-phone">
                     <p class="footer-contacts-phone-header">Телефон:</p>
