I made disign header, internrt-shops page, footer 1280px screen with and counted px on rem in footer.scss file

--- a/src/html/home/prefooter.html
+++ b/src/html/home/prefooter.html
@@ -24,3 +24,126 @@
 <!--    </div>-->
 
 <!--</section>-->
+
+
+
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--  <meta charset="UTF-8">-->
+<!--  <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<section class="prefooter">-->
+<!--  <div class="prefooter-inner appeal-inner">-->
+<!--    <div class="prefooter-wrapper">-->
+
+<!--      <div class="second-screen-intouch">-->
+<!--        <img src="../img/prefooter/image 18.png" alt="eyes" />-->
+<!--        <h2>Мы на связи:</h2>-->
+<!--        <div class="second-screen-intouch-icons">-->
+<!--          <a href=""><img src="@img/icons/icons.svg#telegram" alt="telegram" /></a>-->
+<!--          <a href=""><img src="@img/icons/icons.svg#viber" alt="viber" /></a>-->
+<!--          <a href=""><img src="@img/icons/icons.svg#whatsapp" alt="whatsapp" /></a>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="second-screen-inner feedback-inner">-->
+<!--        <div class="second-screen-wrapper">-->
+<!--          <p class="second-screen-feedback-text">-->
+<!--            Так же вы можете связаться с нами с помощью формы обратной связи-->
+<!--          </p>-->
+<!--          <div class="second-screen-feedback-arrow arrow-feedback">-->
+<!--            <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
+<!--          </div>-->
+<!--          <form class="second-screen-feedback-form">-->
+<!--            <h3 class="second-screen-feedback-form-title">Напишите нам</h3>-->
+<!--            <div class="second-screen-feedback-form-wrapper">-->
+<!--              <div class="feedback-name">-->
+<!--                &lt;!&ndash; <label for="feedback-name">-->
+<!--                    <span>Ваше имя</span>-->
+<!--                    <span>*</span>-->
+<!--                  </label> &ndash;&gt;-->
+<!--                <input-->
+<!--                  id="feedback-name"-->
+<!--                  placeholder="Ваше имя"-->
+<!--                  required-->
+<!--                  class="second-screen-feedback-form-input feedback-name"-->
+<!--                  name="feedback"-->
+<!--                  type="text"-->
+<!--                />-->
+<!--              </div>-->
+<!--              <div class="feedback-mail">-->
+<!--                &lt;!&ndash; <label for="feedback-mail">-->
+<!--                    <span>E-mail для связи</span>-->
+<!--                    <span>*</span>-->
+<!--                  </label> &ndash;&gt;-->
+<!--                <input-->
+<!--                  id="feedback-mail"-->
+<!--                  placeholder="E-mail для связи"-->
+<!--                  required-->
+<!--                  class="second-screen-feedback-form-input feedback-mail"-->
+<!--                  name="feedback"-->
+<!--                  type="email"-->
+<!--                />-->
+<!--              </div>-->
+<!--              <div class="feedback-tel">-->
+<!--                &lt;!&ndash; <label for="feedback-tel">-->
+<!--                    <span>Телефон</span>-->
+<!--                    <span>(если хотите, чтоб мы позвонили)</span>-->
+<!--                  </label> &ndash;&gt;-->
+<!--                <input-->
+<!--                  id="feedback-tel"-->
+<!--                  placeholder="Телефон (если хотите, чтоб мы позвонили)"-->
+<!--                  class="second-screen-feedback-form-input feedback-tel"-->
+<!--                  name="feedback"-->
+<!--                  type="tel"-->
+<!--                />-->
+<!--              </div>-->
+<!--              <div class="feedback-area">-->
+<!--            <textarea-->
+<!--              required-->
+<!--              placeholder="Сообщение"-->
+<!--              id="feedback-area"-->
+<!--              class="second-screen-feedback-form-textarea feedback-area"-->
+<!--              name="feedback"-->
+<!--              id="feedback-area"-->
+<!--            ></textarea>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <div class="second-screen-feedback-form-bottom">-->
+<!--              <div class="second-screen-feedback-form-agreement">-->
+<!--                <label class="second-screen-feedback-form-switch">-->
+<!--                  <input name="feedback" type="checkbox" />-->
+<!--                  <span></span>-->
+<!--                </label>-->
+<!--                <span class="second-screen-feedback-form-agreement-text"-->
+<!--                >Я согласен на <a>обработку персональных данных</a></span-->
+<!--                >-->
+<!--              </div>-->
+<!--              <button class="second-screen-feedback-form-btn" name="feedback" type="button">-->
+<!--                Отправить-->
+<!--              </button>-->
+<!--            </div>-->
+<!--          </form>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      &lt;!&ndash;                <div class="connection">&ndash;&gt;-->
+<!--      &lt;!&ndash;                    <img src="../img/prefooter/image 18.png" alt="eyes" />&ndash;&gt;-->
+<!--      &lt;!&ndash;                    <div class="connection-block">&ndash;&gt;-->
+<!--      &lt;!&ndash;                        <span class="connection-title">Мы на связи:</span>&ndash;&gt;-->
+<!--      &lt;!&ndash;                        <img class="connection-img" src="../img/prefooter/call1.svg" alt="call1"/>&ndash;&gt;-->
+<!--      &lt;!&ndash;                        <img class="connection-img" src="../img/prefooter/call2.svg" alt="call2"/>&ndash;&gt;-->
+<!--      &lt;!&ndash;                        <img class="connection-img" src="../img/prefooter/call3.svg" alt="call3"/>&ndash;&gt;-->
+<!--      &lt;!&ndash;                    </div>&ndash;&gt;-->
+<!--      &lt;!&ndash;                </div>&ndash;&gt;-->
+<!--      &lt;!&ndash;                <div class="feedback">&ndash;&gt;-->
+<!--      &lt;!&ndash;                    <p class="feedback-title">Так же вы можете связаться с нами с помощью формы обратной связи</p>&ndash;&gt;-->
+<!--      &lt;!&ndash;                    <img class="feedback-arrow" src="../img/prefooter/arrowdown.svg" alt="arrowdown"/>&ndash;&gt;-->
+<!--      &lt;!&ndash;                </div>&ndash;&gt;-->
+<!--    </div>-->
+<!--    &lt;!&ndash;        </div>&ndash;&gt;-->
+<!--  </div>-->
+<!--</section>-->
+<!--</body>-->
+<!--</html>-->
