--- a/src/html/home/services-sites.html
+++ b/src/html/home/services-sites.html
@@ -231,7 +231,7 @@
 <!--                </div>-->
             </div>
 <!--        </div>-->
-
+        </div>
     </section>
 </main>
 <!--@@include('html/footer.html',{})-->
