--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -74,6 +74,7 @@
             </button>
           </div>
         </div>
+
         <div class="internet-content container">
             <p class="internet-content-header">Продавайте товары онлайн</p>
             <div class="internet-content-block">
@@ -85,7 +86,9 @@
             </div>
         </div>
 <!--        <hr/>-->
+
       <div class="line"></div>
+
       <div class="page-pros container">
         <p class="page-pros-title">Плюсы работы с нами</p>
         <div class="page-pros-item">
@@ -143,6 +146,7 @@
                 <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
             </div>
         </div>
+
         <div class="page-bonuses">
           <div class="page-bonuses-container container">
             <div class="page-bonuses-content">
@@ -205,6 +209,7 @@
             <img class="page-bonuses-img" src='img/internet-shops/support.png' alt="support"/>
           </div>
         </div>
+
         <div class="page-cases container">
             <p class="page-cases-title">Наши кейсы</p>
             <div class="page-cases-gallery">
@@ -232,5 +237,6 @@
         </div>
     </section>
 </main>
+@@include('html/footer.html',{})
 </body>
 </html>
