Prefooter. Made prefooter (in src/html/home/prefooter.html) adaptive design in file (src/scss/all-pages/prefooter.scss)

--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -237,6 +237,7 @@
         </div>
     </section>
 </main>
+@@include('html/home/prefooter.html',{})
 @@include('html/footer.html',{})
 </body>
 </html>
