--- a/src/html/header.html
+++ b/src/html/header.html
@@ -15,5 +15,8 @@
     <span class="header-phone-text"> +7 980 375 22 54 </span>
     <img class="header-phone-arrow" src="@img/icons/icons.svg#arrow" alt="arrow" />
   </a>
+  <svg class="svg-burger" width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 1a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z" fill="#474747"/>
+  </svg>
 </header>
 <div class="header-line"></div>
