HEADER. add dropdown menu and connected jquery

--- a/src/about.html
+++ b/src/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-@@include('html/head.html', {
+@@include('html/all-pages/head.html', {
     "title": "О нас"
 })
 <body>
-    @@include('html/header.html',{})
+    @@include('html/all-pages/header.html',{})
     <main></main>
-    @@include('html/footer.html',{})
+    @@include('html/all-pages/footer.html',{})
 </body>
 </html>
