--- a/src/html/all-pages/footer.html
+++ b/src/html/all-pages/footer.html
@@ -12,7 +12,7 @@
                 </div>
 
                 <div class="footer-box">
-                    <img class="footer-box-img" src="../img/home/footer-img.png" alt="footer-img"/>
+                    <img class="footer-box-img" src="../../img/home/footer-img.png" alt="footer-img"/>
 
                     <div class="footer-box-main">
                         <p class="footer-box-main-header">CRM Битрикс 24 для автоматизации вашего бизнеса</p>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="footer-contacts">
-            <img class="footer-contacts-logo" src="../img/home/logo.svg" alt="logo"/>
+            <img class="footer-contacts-logo" src="../../img/home/logo.svg" alt="logo"/>
             <div class="footer-contacts-info">
                 <div class="footer-contacts-phone">
                     <p class="footer-contacts-phone-header">Телефон:</p>
@@ -74,4 +74,5 @@
         </div>
 
     </div>
+    <script src="js/app.min.js"></script>
 </footer>
