--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-@@include('html/head.html',{
+@@include('html/all-pages/head.html',{
 "title": "Интернет-магазин",
 "linkCSS": "css/internet-shops.min.css"
 })
@@ -42,7 +42,7 @@
     <path d="M14.9194 12.1258C15.0993 11.9472 15.1994 11.7053 15.1994 11.4532C15.1994 11.1999 15.0993 10.958 14.9194 10.7806L10.5038 6.38276C10.1314 6.01289 9.52976 6.01416 9.1599 6.3853C8.79003 6.7577 8.79003 7.35936 9.16243 7.72923L12.9029 11.4532L9.16243 15.1772C8.79003 15.5471 8.79003 16.1475 9.1599 16.5199C9.52976 16.8923 10.1314 16.8936 10.5038 16.5224L14.9194 12.1258Z" fill="white"/>
   </symbol>
 </svg>
-@@include('html/header.html',{})
+@@include('html/all-pages/header.html',{})
 <main>
     <section class="internet">
         <div class="page-breadcrumbs container">
@@ -237,6 +237,6 @@
         </div>
     </section>
 </main>
-@@include('html/footer.html',{})
+@@include('html/all-pages/footer.html',{})
 </body>
 </html>
