Prefooter. I deleted div line, made sizes images in class bitrix-gallery adaptive. Internet-shops. Added border-top in block breadcrumps and border-bottom in block internet-content. Deleted div for line.

--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -45,18 +45,20 @@
 @@include('html/header.html',{})
 <main>
     <section class="internet">
-        <div class="page-breadcrumbs container">
+        <div class="page-breadcrumbs">
+          <div class="container">
             <span class="page-breadcrumbs-text">Главная</span>
-<!--            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>-->
+            <!--            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>-->
             <svg class="svg-arrowBread">
-                <use href="#arrowBread"/>
+              <use href="#arrowBread"/>
             </svg>
             <span class="page-breadcrumbs-text">Услуги</span>
             <svg class="svg-arrowBread">
-                <use href="#arrowBread"/>
+              <use href="#arrowBread"/>
             </svg>
-<!--            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>-->
+            <!--            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>-->
             <span class="page-breadcrumbs-text">Разработка интернет-магазинов</span>
+          </div>
         </div>
         <p class="page-title container">Разработка интернет-магазинов</p>
         <div class="page-header">
@@ -75,7 +77,8 @@
           </div>
         </div>
 
-        <div class="internet-content container">
+        <div class="internet-content">
+          <div class="container">
             <p class="internet-content-header">Продавайте товары онлайн</p>
             <div class="internet-content-block">
               <div class="content-block">
@@ -84,10 +87,9 @@
               </div>
               <img class="content-block-img" src='img/internet-shops/internet.png' alt="internet"/>
             </div>
+          </div>
         </div>
 <!--        <hr/>-->
-
-      <div class="line"></div>
 
       <div class="page-pros container">
         <p class="page-pros-title">Плюсы работы с нами</p>
