--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -158,7 +158,7 @@
                   <svg class="svg-resize-horizontal-round" width="24" height="24">
                     <use href="#resize-horizontal-round"/>
                   </svg>
-                  <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
+                  <!--            i        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
                   <span class="list-item-text">Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
                 </div>
                 <div class="page-list-item">
