--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -68,8 +68,9 @@
               <p class="page-header-text">Решение для начинающего</p>
               <p class="page-header-boldText">малого бизнеса</p>
             </div>
-            <button class="page-blueBtn">ТО ЧТО НУЖНО!
-              <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <button class="page-blueBtn">То что нужно!
+              <p class="vector-btn"> >> </p>
+              <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 11L6 6L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
               <!--                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>-->
