Development. Made some bloks in file development.html and added styles in file development.scss

--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -18,20 +18,20 @@
 <!--  <svg class="svg-burger" width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">-->
 <!--    <path d="M0 1a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z" fill="#474747"/>-->
 <!--  </svg>-->
-  <div class="header-phone">
-    <img class="header-phone-icon" src="@img/icons/icons.svg#shape" alt="phone"/>
-    <div class="header-phone-wrapper">
-      <a href="tel:+79803752254">
-        <p class="header-phone-text"> +7 980 375 22 54 </p>
-      </a>
-      <div class="header-phone-wrapper-hide">
-        <a href="tel:+79803752254">
-          <p class="header-phone-text"> +7 910 360 63 92 </p>
-        </a>
-      </div>
-    </div>
-    <img class="header-phone-arrow" src="@img/icons/icons.svg#arrow" alt="arrow"/>
-  </div>
+<!--  <div class="header-phone">-->
+<!--    <img class="header-phone-icon" src="@img/icons/icons.svg#shape" alt="phone"/>-->
+<!--    <div class="header-phone-wrapper">-->
+<!--      <a href="tel:+79803752254">-->
+<!--        <p class="header-phone-text"> +7 980 375 22 54 </p>-->
+<!--      </a>-->
+<!--      <div class="header-phone-wrapper-hide">-->
+<!--        <a href="tel:+79803752254">-->
+<!--          <p class="header-phone-text"> +7 910 360 63 92 </p>-->
+<!--        </a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <img class="header-phone-arrow" src="@img/icons/icons.svg#arrow" alt="arrow"/>-->
+<!--  </div>-->
 
   @@include('dropdown.html',{})
 </header>
