--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <!--      @@include('html/home/services-internet-shops.html',{})-->
 <!--      @@include('html/home/services-1C-integration.html',{})-->
 <!--      @@include('html/development.html',{})-->
-<!--      @@include('html/internet-shops.html',{})-->
+      @@include('src/internet-shops.html',{})
 <!--      @@include('html/1C-integration.html',{})-->
 <!--      @@include('html/support.html',{})-->
 <!--      @@include('html/crm-implement.html',{})-->
