Development. Added stiles for some blocks in page

--- a/src/services-1C-integration.html
+++ b/src/services-1C-integration.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<!--@@include('html/header.html',{})-->
+@@include('html/all-pages/header.html',{})
 <main>
     <section class="services">
         <div class="services-inner">
@@ -53,12 +53,12 @@
                         </div>
 
                         <div class="services-image">
-                            <img class="services-image-vectors" src="../../img/services/vectors.png" alt="vectors"/>
-                            <img class="services-image-additional-1" src="../../img/services/site-development.png" alt="site-development"/>
-                            <img class="services-image-additional-1" src="../../img/services/turbid-1.png" alt="turbid-1"/>
-                            <img class="services-image-main" src="../../img/services/internet-shops-1.png" alt="internet-shops-1"/>
-                            <img class="services-image-additional-2" src="../../img/services/1C-integration-2.png" alt="1C-integration-2"/>
-                            <img class="services-image-additional-2" src="../../img/services/turbid-2.png" alt="turbid-2"/>
+                            <img class="services-image-vectors" src="img/services/vectors.png" alt="vectors"/>
+                            <img class="services-image-additional-1" src="img/services/internet-shops-2.png" alt="internet-shops-2"/>
+                            <img class="services-image-additional-1" src="img/services/turbid-1.png" alt="turbid-1"/>
+                            <img class="services-image-main" src="img/services/1C-integration-1.png" alt="integration-1"/>
+                            <img class="services-image-additional-2" src="img/services/site-support-2.png" alt="site-support-2"/>
+                            <img class="services-image-additional-2" src="img/services/turbid-2.png" alt="turbid-2"/>
                         </div>
 
                         <div class="services-lower">
@@ -72,30 +72,34 @@
                                     </div>
                                 </div>
 
-                                <p class="services-name-title-2">Разработка</p>
-                                <p class="services-name-title">интернет-
-                                    магазинов</p>
+                                <p class="services-name-title">Интеграция 1С</p>
                                 <button class="details-btn">Подронее
                                     <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                                 </button>
                             </div>
 
-                            <div class="services-name-description">
-                                <p class="services-name-description-text">Сегодня интернет-магазин один из важных каналов продаж. Наша компания занимается созданием интернет-магазинов на базе 1С-Битрикс уже более 5-ти лет. Имеем хороший опыт интеграции с различными CRM системами, 1С и других системами бухучета.</p>
-                                <p class="services-name-description-text">Для нас важно, чтобы интернет-магазин был хорошо продуман, касаемо сортировки товаров, фильтрации позиций, интеграции и т.д. Именно поэтому над проектом работает целая команда в составе бизнес-аналитика, дизайнера, маркетолога, верстальщика, разработчика.
-                                    Плюсы работы с нами:
-                                    Комплексный подход
-                                    Опыт работы с малыми и крупным бизнесом
-                                    сертифицированные сотрудники
-                                    максимальная прозрачность - вы будете в курсе всех задач и результатов,
-                                    дальнейшее сопровождение проекта
-                                    гарантийное обслуживание
-                                    Бонусы:
-                                    хостинг бесплатно + SSL сертификат на 1 год в подарок;
-                                    Базовая настройка SEO и подключение основных метрик
-                                    Построим для вас CJM;
-                                    Консультация по настройке контекстной рекламы для вашего сайта.
+                            <div class="page-list">
+                                <p class="services-name-description-text">Интеграция сайта с 1С - это отличное комплексное решение для автоматизации торговли в вашей организации.
                                 </p>
+                                <p class="page-list-title">Интеграция с 1С позволит вам:</p>
+                                <div class="page-list-list">
+                                    <div class="page-list-item">
+                                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                                        <span class="page-list-text">видеть все отчеты по позициям прозрачно с автоматическим формированием</span>
+                                    </div>
+                                    <div class="page-list-item">
+                                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                                        <span class="page-list-text">иметь всегда актуальный каталог, ассортимент и цены</span>
+                                    </div>
+                                    <div class="page-list-item">
+                                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                                        <span class="page-list-text">избавиться от ошибок при формировании заказа и от их потерь</span>
+                                    </div>
+                                    <div class="page-list-item">
+                                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                                        <span class="page-list-text">быть в курсе цепочки продаж как со стороны производителя, так и со стороны покупателя...</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
@@ -230,6 +234,6 @@
 
     </section>
 </main>
-<!--@@include('html/footer.html',{})-->
+@@include('html/all-pages/footer.html',{})
 </body>
 </html>
