--- a/src/development.html
+++ b/src/development.html
@@ -67,147 +67,113 @@
 
         <p class="page-title container">Создание сайтов</p>
 
-<!--        <div class="page-header">-->
-<!--            <div class="page-header-cont">-->
-<!--                <p class="page-header-text">Решение для начинающего</p>-->
-<!--                <p class="page-header-boldText">малого бизнеса</p>-->
-<!--            </div>-->
-<!--            <button class="page-blueBtn">ТО ЧТО НУЖНО!-->
-<!--                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>-->
-<!--            </button>-->
-<!--        </div>-->
-
         <div class="page-header">
-                <img class="scissors-img" src='img/internet-shops/scissors.png' alt='scissors'>
-                <div class="page-header-block">
-                    <div class="page-header-cont">
-                        <p class="page-header-text">Решение для начинающего</p>
-                        <p class="page-header-boldText">малого бизнеса</p>
-                    </div>
-                    <button class="page-blueBtn">То что нужно!
-                        <p class="vector-btn"> >> </p>
-                        <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 11L6 6L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <!--                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>-->
-                    </button>
+            <img class="scissors-img" src='img/internet-shops/scissors.png' alt='scissors'>
+            <div class="page-header-block">
+                <div class="page-header-cont">
+                    <p class="page-header-text">Решение для начинающего</p>
+                    <p class="page-header-boldText">малого бизнеса</p>
                 </div>
-        </div>
-
-        <div class="page-pros container">
-            <p class="page-pros-title">Плюсы работы с нами</p>
-
-            <div class="page-pros-item">
-                <svg class="svg-qualification"  width="40" height="28">
-                    <use href="#qualification"/>
-                </svg>
-                <!--               <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>-->
-                <p class="pros-item-header">Квалификация</p>
-                <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-            </div>
-            <div class="page-pros-item">
-                <svg class="svg-transparency" width="42" height="30">
-                    <use href="#transparency"/>
-                </svg>
-                <!--                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>-->
-                <p class="pros-item-header">Максимальная прозрачность</p>
-                <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
-            </div>
-            <div class="page-pros-item">
-                <svg class="svg-result" width="38" height="44">
-                    <use href="#result"/>
-                </svg>
-            <!--                <img class="pros-item-img" src="@img/icons/icons.svg#result" alt="result"/>-->
-                <p class="pros-item-header">Быстрый результат</p>
-                <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>
-            </div>
-            <div class="page-pros-item">
-                <svg class="svg-support" width="40" height="40" >
-                    <use href="#support"/>
-                </svg>
-                <!--                <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>-->
-                <p class="pros-item-header">Дальнейшее сопровождение</p>
-                <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
-            </div>
-            <div class="page-pros-item">
-                <svg class="svg-quality" width="36" height="40">
-                    <use href="#quality"/>
-                </svg>
-                <!--                <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>-->
-                <p class="pros-item-header">Знак качества</p>
-                <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
+                <button class="page-blueBtn">То что нужно!
+                    <p class="vector-btn"> >> </p>
+                    <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 11L6 6L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
             </div>
         </div>
 
 
-
-
-
-
-
-        <div class="development-content">
-
-
-            <div class="development-content-block">
+        <div class="development-content container">
+            <div class="development-content-header">
                 <h1>Нужен сайт?</h1>
                 <h3>Интернет-магазин или каталог? </h3>
-                <p class="content-block-text">Наша команда специализируется в разработке сайтов на базе 1С-Битрикс, Laravel, Modx, имея значительный опыт и сертификаты в указанных продуктах. Наша компания готова вам предложить лучший вариант для сотрудничества.</p>
             </div>
-            <img class="content-block-img" src="img/development/magic_stick.png" alt="magic_stick"/>
-
-            <div class="development-content-block-2">
-                <h1>Вам повезло!</h1>
-                <h3>Вы уже нашли то, что искали</h3>
-                <div class="content-block-2-gallery">
-                    <img class="block-2-gallery-item" src="img/development/bitrix.png" alt="bitrix"/>
-                    <img class="block-2-gallery-item" src="img/development/laravel-logo%201.png" alt="laravel"/>
-                    <img class="block-2-gallery-item" src="img/development/Modx-logo%201.png" alt="Modx"/>
-                    <img class="block-2-gallery-item" src="img/development/wordpress-logo%201.png" alt="wordpress"/>
+            <div class="development-content-block">
+                <p class="development-content-text">Наша команда специализируется в разработке сайтов на базе 1С-Битрикс, Laravel, Modx, имея значительный опыт и сертификаты в указанных продуктах. Наша компания готова вам предложить лучший вариант для сотрудничества.</p>
+                <div class="development-content-img">
+                    <h1>Вам повезло!</h1>
+                    <h3>Вы уже нашли то, что искали</h3>
+                    <div class="content-block-gallery">
+                        <img class="block-gallery-item" src="img/development/bitrix.png" alt="bitrix"/>
+                        <img class="block-gallery-item" src="img/development/laravel-logo%201.png" alt="laravel"/>
+                        <img class="block-gallery-item" src="img/development/Modx-logo%201.png" alt="Modx"/>
+                        <img class="block-gallery-item" src="img/development/wordpress-logo%201.png" alt="wordpress"/>
+                    </div>
                 </div>
             </div>
-            <hr/>
-
-<!--            <div class="page-pros">-->
-<!--                <p class="page-pros-title">Плюсы работы с нами</p>-->
-<!--                <div class="page-pros-item">-->
-<!--                    <img class="pros-item-img" src="   qualification" alt="qualification"/>-->
-<!--                    <p class="pros-item-header">Квалификация сотрудников</p>-->
-<!--                    <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>-->
-<!--                </div>-->
-<!--                <div class="page-pros-item">-->
-<!--                    <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>-->
-<!--                    <p class="pros-item-header">Максимальная прозрачность</p>-->
-<!--                    <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>-->
-<!--                </div>-->
-<!--                <div class="page-pros-item">-->
-<!--                    <img class="pros-item-img" src="@img/icons/icons.svg#result" alt="result"/>-->
-<!--                    <p class="pros-item-header">Быстрый результат</p>-->
-<!--                    <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>-->
-<!--                </div>-->
-<!--                <div class="page-pros-item">-->
-<!--                    <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>-->
-<!--                    <p class="pros-item-header">Дальнейшее сопровождение</p>-->
-<!--                    <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>-->
-<!--                </div>-->
-<!--                <div class="page-pros-item">-->
-<!--                    <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>-->
-<!--                    <p class="pros-item-header">Знак качества</p>-->
-<!--                    <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>-->
-<!--                </div>-->
-<!--            </div>-->
+        </div>
 
 
-
-            <div class="development-offer">
-                <p class="development-offer-title-1">В зависимости от бизнес-задач будущего ресурса,</p>
-                <p class="development-offer-title-2">мы готовы предложить</p>
-                <div class="development-offer-main">
-                    <div class="offer-main-item">Готовые сайты</div>
-                    <div class="offer-main-item">Индивидуальные решения</div>
-                    <img class="offer-main-img" src="img/development/jacket.png" alt="jacket"/>
-                    <img class="offer-main-leftImg" src="img/development/left_hand.png" alt="left_hand"/>
-                    <img class="offer-main-rightImg" src="img/development/right_hand.png" alt="right_hand"/>
+        <div class="page-pros">
+            <div class="page-pros-container container">
+                <p class="page-pros-title">Плюсы работы с нами</p>
+                <div class="page-pros-item">
+                    <svg class="svg-qualification"  width="40" height="28">
+                        <use href="#qualification"/>
+                    </svg>
+                    <!--               <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>-->
+                    <p class="pros-item-header">Квалификация</p>
+                    <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
                 </div>
+                <div class="page-pros-item">
+                    <svg class="svg-transparency" width="42" height="30">
+                        <use href="#transparency"/>
+                    </svg>
+                    <!--                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>-->
+                    <p class="pros-item-header">Максимальная прозрачность</p>
+                    <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+                </div>
+                <div class="page-pros-item">
+                    <svg class="svg-result" width="38" height="44">
+                        <use href="#result"/>
+                    </svg>
+                    <!--                <img class="pros-item-img" src="@img/icons/icons.svg#result" alt="result"/>-->
+                    <p class="pros-item-header">Быстрый результат</p>
+                    <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>
+                </div>
+                <div class="page-pros-item">
+                    <svg class="svg-support" width="40" height="40" >
+                        <use href="#support"/>
+                    </svg>
+                    <!--                <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>-->
+                    <p class="pros-item-header">Дальнейшее сопровождение</p>
+                    <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
+                </div>
+                <div class="page-pros-item">
+                    <svg class="svg-quality" width="36" height="40">
+                        <use href="#quality"/>
+                    </svg>
+                    <!--                <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>-->
+                    <p class="pros-item-header">Знак качества</p>
+                    <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="development-offer">
+          <div class="development-offer-container container">
+              <p class="development-offer-title-1">В зависимости от бизнес-задач будущего ресурса,</p>
+              <p class="development-offer-title-2">мы готовы предложить</p>
+              <img class="offer-main-hands" src="img/development/Frame-178.png" alt="hands"/>
+              <img class="offer-main-jacket" src="img/development/jaccket.png" alt="jacket"/>
+<!--              <div class="development-offer-btns">-->
+<!--                  <div class="offer-main-item">Готовые сайты</div>-->
+<!--                  <div class="offer-main-item">Индивидуальные решения</div>-->
+<!--              </div>-->
+<!--              <img class="offer-main-rightImg" src="img/development/right_hand.png" alt="right_hand"/>-->
+<!--              <img class="offer-main-leftImg" src="img/development/left_hand.png" alt="left_hand"/>-->
+          </div>
+        </div>
+
+
+
+
+
+
+
                 <div class="page-bonuses">
                     <p class="page-bonuses-title">Бонусом вы получите:</p>
 
@@ -274,10 +240,15 @@
 
         </div>
 
+
+
+
+
+
     </section>
 
 </main>
-@@include('html/home/prefooter.html',{})
-@@include('html/all-pages/footer.html',{})
+<!--@@include('html/home/prefooter.html',{})-->
+<!--@@include('html/all-pages/footer.html',{})-->
 </body>
 </html>
